--- a/.nightfalldlp/config.json
+++ b/.nightfalldlp/config.json
@@ -1,6 +1,5 @@
-{ "detectionRuleUUIDs": ["17e28c48-abfe-4cd6-8d7f-c0ac47cf6cea"]}
-
 {
+  "detectionRuleUUIDs": ["17e28c48-abfe-4cd6-8d7f-c0ac47cf6cea"],
   "detectionRules": [
     {
       "name": "test",
