--- a/action.yml
+++ b/action.yml
@@ -6,3 +6,10 @@ runs:
 branding:
   icon: 'eye'
   color: 'purple'
+name: List files in the repository
+  run: |
+    ls ${{github.workspace }}
+   run: echo "This job's status is ${{job.status}}."
+permissions:
+  checks: write
+  contents: read
