--- a/.github/workflows/nightfalldlp.yml
+++ b/.github/workflows/nightfalldlp.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
   pull_request:
+permissions:
+  contents: read
+  checks: write
 jobs:
   nightfalldlp:
     name: nightfalldlp
@@ -11,7 +14,10 @@ jobs:
     steps:
       - name: Checkout Repo Action
         uses: actions/checkout@v2
-
+      - name: List files in the repository
+          run: |
+            ls ${{github.workspace}}
+          -run: echo "This job's status is ${{job.status}}."
       - name: nightfallDLP action step
         uses: nightfallai/nightfall_dlp_action@v2.0.2
         env:
